--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,26 +57,91 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: rgba(217, 179, 145, 0.5);
+
   .logo {
     width: 300px;
     height: 100px;
     padding: 10px;
   }
+
   nav {
     ul {
       list-style: none;
+
       li {
         display: inline-block;
         margin-right: 15px;
+
+        a {
+          text-decoration: none;
+          color: black;
+          font-size: 1.2rem;
+        }
       }
-      a {
-        text-decoration: none;
-        color: black;
-        font-size: 1.2rem;
+    }
+
+    .menu-toggle {
+      background: none;
+      border: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: #f2f1df;
+      display: none; /* Ocultamos el botón por defecto */
+    }
+
+    .menu {
+      list-style: none;
+      display: flex; /* Visible en escritorio */
+    }
+
+    .menu.nav-open {
+      display: flex; /* Mostrar menú en pantallas pequeñas */
+    }
+  }
+}
+/* MediaQuerys Navbar */
+
+@media screen and (max-width: 768px) {
+  .headerContainer {
+    nav {
+      .menu-toggle {
+        display: block; /* Mostrar el botón en pantallas pequeñas */
+      }
+
+      .menu {
+        display: none; /* Esconder el menú inicialmente */
+        flex-direction: column;
+        align-items: center;
+        background-color: rgba(217, 179, 145, 0.9); /* Opcional */
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+      }
+
+      .menu.nav-open {
+        display: flex; /* Mostrar el menú al activar el toggle */
       }
     }
   }
-  background-color: rgba(217, 179, 145, 0.5);
+}
+
+@media screen and (min-width: 769px) {
+  .headerContainer {
+    nav {
+      .menu-toggle {
+        display: none; /* Esconder el botón en escritorio */
+      }
+
+      .menu {
+        display: flex;
+        flex-direction: row;
+        position: static;
+        background-color: transparent;
+      }
+    }
+  }
 }
 
 /* Estilos sección principal del Index */
