--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 :root {
-  --h3-size: 1.5rem; /* Estándar para h3 */
+  --h1-size: 3rem;
+  --h2-size: 2.5rem;
+  --h3-size: 1.8rem; /* Estándar para h3 */
+  --color-bg: #8a522d;
+  --color-highlight: #a5673f;
+  --color-overlay: rgba(64, 35, 24, 0.8);
+  --color-light: rgba(217, 179, 145, 0.9);
+  --color-white: #ffffff;
+  --color-wsmoke: #f5f5f5;
 }
 /* Reseteo de valores */
 * {
@@ -14,74 +22,65 @@
 
 /* Estilos Generales de la página */
 body {
-  background-color: #8a522d;
+  background-color: var(--color-bg);
+  font-family: "Ubuntu", sans-serif;
 }
 
 h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
+h3 {
   font-family: "Arima", system-ui;
-  font-optical-sizing: auto;
   font-weight: 500;
-  font-style: normal;
-  color: whitesmoke;
+  color: var(--color-wsmoke);
   text-align: center;
 }
 
-p,
-a {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
 h1 {
-  font-size: 4rem;
+  font-size: var(--h1-size);
+  margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: var(--h2-size);
+  margin-bottom: 15px;
 }
+
 h3 {
-  font-size: 2rem;
+  font-size: var(--h3-size);
+  margin: 10px 0;
 }
-main {
-  padding-top: 30px;
+
+a {
+  text-decoration: none;
+  font-weight: 500;
+  color: black;
+  font-size: 1.2rem;
 }
+
 /* Estilos del header */
 .headerContainer {
-  height: 15vh;
-  position: sticky;
-  top: 0;
-  z-index: 1005;
+  margin-bottom: 20px;
+  height: 20vh;
   padding: 10px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(217, 179, 145, 0.5);
+  background-color: var(--color-light);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 
   .logo {
     width: 300px;
-    height: 100px;
-    padding: 10px;
+    height: auto;
+    padding: 50px;
   }
 
   nav {
     ul {
-      list-style: none;
-
       li {
         display: inline-block;
         margin-right: 15px;
-
-        a {
-          text-decoration: none;
-          color: black;
-          font-size: 1.2rem;
-        }
       }
     }
 
@@ -90,13 +89,13 @@ main {
       border: none;
       font-size: 1.5rem;
       cursor: pointer;
-      color: #f2f1df;
       display: none; /* Ocultamos el botón por defecto */
     }
 
     .menu {
       list-style: none;
       display: flex; /* Visible en escritorio */
+      gap: 15px;
     }
 
     .menu.nav-open {
@@ -117,7 +116,7 @@ main {
         display: none; /* Esconder el menú inicialmente */
         flex-direction: column;
         align-items: center;
-        background-color: rgba(217, 179, 145, 0.9); /* Opcional */
+        background-color: var(--color-highlight);
         position: absolute;
         top: 100%;
         left: 0;
@@ -298,7 +297,7 @@ main {
 .reseñas {
   text-align: center;
   padding: 20px; /* Espaciado alrededor de la sección */
-  background-color: rgba(217, 179, 145, 0.2); /* Fondo suave */
+  /* background-color: rgba(217, 179, 145, 0.2) */
 }
 
 .reseñas a {
@@ -398,7 +397,6 @@ main {
 .nosotros {
   text-align: center;
   padding: 20px;
-  background-color: rgba(217, 179, 145, 0.2); /* Fondo suave */
   height: 100vh;
   width: 100%;
 }
@@ -465,142 +463,165 @@ main {
 }
 
 /* Estilos para el footer */
-footer {
-  background-color: rgba(217, 179, 145, 0.5);
-  padding: 20px 5px;
+.footerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  row-gap: 30px;
+  padding: 20px;
   width: 100%;
-  position: static; /* Fijar el footer al fondo */
-  bottom: 0;
-  left: 0;
-  z-index: 100;
-  height: 40vh;
-  .footerContainer {
+  background-color: rgba(217, 179, 145, 0.5);
+  flex-wrap: wrap;
+
+  .logo {
+    width: 250px;
+    height: auto;
+  }
+
+  .fa-whatsapp {
+    font-size: 60px;
+    color: #25d366;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
-    gap: 20px;
-    .logo {
-      width: 200px;
-      height: auto;
+    gap: 15px;
+    .fa-instagram,
+    .fa-facebook,
+    .fa-x-twitter {
+      font-size: 2rem;
     }
-    .footerNav {
-      ul {
-        list-style: none;
-        padding: 0;
-        display: flex;
-        gap: 15px;
-        li {
-          display: inline-block;
-          padding: initial;
-          transition: transform 0.3s ease;
-        }
-        li:hover {
-          transform: translateY(-10px);
-        }
-        a {
-          text-decoration: none;
-          color: black;
-          font-size: 1rem;
-          transition: color 0.3s ease;
-        }
-        a:hover {
-          color: #a5673f;
-        }
-      }
+    li {
+      display: inline-block;
+      padding: initial;
+      transition: transform 0.3s ease;
     }
-
-    .footerNet {
-      ul {
-        list-style: none;
-        padding: 0;
-        display: flex;
-        gap: 15px;
-        li {
-          display: inline-block;
-          transition: transform 0.3s ease;
-          padding: initial;
-          a {
-            text-decoration: none;
-            color: black;
-            font-size: 1.7rem;
-            transition: color 0.3s ease;
-          }
-          a:hover {
-            color: #a5673f;
-          }
-        }
-        li:hover {
-          transform: translateY(-10px);
-        }
-      }
+    li:hover {
+      transform: translateY(-10px);
     }
-
-    .footerAddres {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      flex-wrap: wrap;
-      p {
-        font-size: medium;
-        line-height: 24px;
-        transition: opacity 0.3s ease;
-      }
-      p:hover {
-        opacity: 0.75;
-      }
+    a {
+      text-decoration: none;
+      color: black;
+      font-size: 1rem;
+      transition: color 0.3s ease;
     }
-
-    .footerCopy {
-      text-align: center;
-      width: 100%;
-      height: auto;
-      p {
-        font-size: small;
-      }
-    }
-
-    .fa-whatsapp {
-      font-size: 60px;
-      color: #25d366;
-      position: fixed;
-      right: 20px;
-      bottom: 20px;
+    a:hover {
+      color: #a5673f;
     }
   }
-}
-/* Media Query footer */
-@media (max-width: 768px) {
-  footer {
-    .footerContainer {
+
+  .footer-main-container {
+    display: flex;
+    column-gap: 80px;
+
+    .footer-first-container {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: space-evenly;
+      column-gap: 30px;
+      padding-left: 20px;
+    }
+
+    .footer-second-container {
+      display: flex;
+      /* width: 100%; */
       flex-direction: column;
+      /* row-gap: 30px; */
+      gap: 10px;
+      align-items: center;
+      /* padding-top: 10px; */
+
+      form input[type="email"] {
+        width: 200px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        font-size: 1rem;
+        margin-bottom: 10px;
+        text-align: center;
+      }
+
+      form input[type="submit"] {
+        background-color: #a5673f;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        font-size: 1rem;
+        cursor: pointer;
+        width: 200px;
+        text-align: center;
+      }
+
+      form input[type="submit"]:hover {
+        background-color: #8b5033;
+      }
+    }
+
+    .footer-third-container {
+      display: flex;
+      width: 100%;
       align-items: center;
       text-align: center;
+      justify-content: center;
+      margin-right: 0;
+    }
+  }
 
-      .footerNav ul,
-      .footerNet ul {
+  .footerCopy {
+    text-align: center;
+    font-size: 0.9rem;
+    color: #555;
+  }
+
+  /* Media Query para pantallas pequeñas Footer */
+  @media (max-width: 768px) {
+    .footer-main-container {
+      flex-direction: column;
+      row-gap: 30px;
+      text-align: center;
+
+      .footer-first-container,
+      .footer-second-container,
+      .footer-third-container {
+        flex-direction: column;
+        row-gap: 20px;
+        align-items: center;
+        padding: 0;
+      }
+
+      .footer-first-container nav ul,
+      .footer-second-container nav ul {
         flex-direction: column;
         gap: 10px;
       }
 
-      .footerNav a,
-      .footerNet a {
-        font-size: 0.9rem;
+      .footer-first-container .logo {
+        width: 200px;
       }
 
-      .footerAddres {
-        font-size: 0.8rem;
+      .footer-second-container form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
 
-      .logo {
-        width: 150px;
+      .footer-third-container address p {
+        margin: 5px 0;
       }
+    }
 
-      .fa-whatsapp {
-        font-size: 40px;
-      }
+    .fa-whatsapp {
+      font-size: 50px;
+      right: 10px;
+      bottom: 10px;
     }
   }
 }
