--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,28 +81,33 @@ a {
       li {
         display: inline-block;
         margin-right: 15px;
+        transition: color 0.3s ease;
+      }
+      a:hover {
+        color: #a5673f;
       }
     }
+  }
 
-    .menu-toggle {
-      background: none;
-      border: none;
-      font-size: 1.5rem;
-      cursor: pointer;
-      display: none; /* Ocultamos el botón por defecto */
-    }
+  .menu-toggle {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: none; /* Ocultamos el botón por defecto */
+  }
 
-    .menu {
-      list-style: none;
-      display: flex; /* Visible en escritorio */
-      gap: 15px;
-    }
+  .menu {
+    list-style: none;
+    display: flex; /* Visible en escritorio */
+    gap: 15px;
+  }
 
-    .menu.nav-open {
-      display: flex; /* Mostrar menú en pantallas pequeñas */
-    }
+  .menu.nav-open {
+    display: flex; /* Mostrar menú en pantallas pequeñas */
   }
 }
+
 /* Responsividad */
 
 @media screen and (max-width: 768px) {
@@ -154,40 +159,38 @@ a {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  height: 80vh;
+  height: 70vh;
   border-radius: 20px;
   text-align: center;
-  margin-bottom: 20px;
   display: flex;
-  /* flex-direction: column; */
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   filter: brightness(90%); /* Reduce la intensidad de la imagen de fondo */
   .mainText {
-    background-color: rgba(64, 35, 24, 0.8);
+    background-color: var(--color-overlay);
     border-radius: 20px;
     margin: 0 auto;
     text-align: center;
     border-radius: 20px;
-    padding: 10px;
+    padding-bottom: 10px;
     width: 80%;
     p {
-      color: white;
+      color: var(--color-white);
       padding-bottom: 10px;
-      font-size: 2rem;
+      font-size: 1.8rem;
+      margin-bottom: 10px;
     }
     a {
       display: inline-block;
-      text-decoration: none;
-      color: white;
-      font-size: 1.6rem;
+      color: var(--color-white);
+      font-size: 1.2rem;
       border: 4px solid #a5673f;
       border-radius: 8px;
-      padding: 4px;
+      padding: 8px;
       transition: color 0.3s ease;
     }
     a:hover {
-      color: #a5673f;
+      color: var(--color-highlight);
     }
   }
 }
@@ -200,7 +203,7 @@ a {
     background-image: none;
   }
   .mainTextMobile {
-    background-color: rgba(64, 35, 24, 0.8);
+    background-color: var(--color-overlay);
     border-radius: 20px;
     margin: 0 auto;
     text-align: center;
@@ -211,84 +214,79 @@ a {
   }
 }
 
-/* Estilos para postres destacados */
+/* Estilos para Postres Destacados */
 .postresDestacados {
-  text-align: center; /* Centra el título */
-  padding: 20px; /* Espaciado alrededor de la sección */
+  padding: 40px 20px;
 }
 
 .postresDestacados h2 {
-  margin-bottom: 20px; /* Espaciado debajo del título */
+  margin-bottom: 30px;
 }
 
-.galeriaDestacados {
-  display: flex; /* Activa el modelo Flexbox */
-  justify-content: center; /* Centra las tarjetas horizontalmente */
-  flex-wrap: wrap; /* Permite que las tarjetas pasen a la siguiente fila si no caben */
-  gap: 20px; /* Espacio entre las tarjetas */
-  margin: 0 auto; /* Centra todo el contenedor */
+.postresDestacados .galeriaDestacados {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 0 auto;
 }
 
-.cardDestacados {
-  display: flex; /* Flexbox interno para alinear contenido */
-  flex-direction: column; /* Apila los elementos de la tarjeta */
+.postresDestacados .galeriaDestacados .cardDestacados {
+  display: flex;
+  flex-direction: column;
   align-items: center; /* Centra los elementos dentro de la tarjeta */
   text-align: center; /* Centra texto */
-  padding: 15px; /* Espaciado interno */
-  border: 4px solid #a5673f; /* Borde */
-  border-radius: 10px; /* Bordes redondeados */
+  padding: 15px;
+  border: 4px solid var(--color-highlight); /* Borde */
+  border-radius: 10px;
   background-color: rgba(217, 179, 145, 0.5);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
-  width: calc(100% / 3 - 20px); /* Tres tarjetas por fila, ajustable */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: calc(100% / 3 - 20px);
   max-width: 300px; /* Tamaño máximo */
   box-sizing: border-box;
-  height: 100%; /* Incluye padding en el ancho */
+  height: 100%;
 }
 
-.cardDestacados img {
+.postresDestacados .galeriaDestacados .cardDestacados img {
   width: 100%; /* Imagen ocupa el ancho del contenedor */
-  height: 150px; /* Altura fija para uniformar las imagenes */
-  border-radius: 5px; /* Bordes redondeados */
+  height: 150px; /* Altura fija para uniformar las imágenes */
+  border-radius: 5px;
   object-fit: cover; /* Asegura que la imagen se recorte proporcionalmente */
-  margin-bottom: 10px; /* Espaciado inferior */
-}
-.cardDestacados h3,
-.cardDestacados h4,
-.cardDestacados a {
-  margin: 10px 0; /* Margen uniforme */
-}
-.cardDestacados h3 {
-  font-size: 1.2rem; /* Tamaño del título del postre */
-  margin: 10px 0; /* Espaciado vertical */
+  margin-bottom: 10px;
 }
 
-.cardDestacados h4 {
-  font-size: 1rem; /* Tamaño del precio */
-  margin-bottom: 10px; /* Espaciado inferior */
+.postresDestacados .galeriaDestacados .cardDestacados h3 {
+  font-size: 1.2rem;
+  margin: 10px 0;
 }
 
-.cardDestacados a {
+.postresDestacados .galeriaDestacados .cardDestacados h4 {
+  font-size: 1rem;
+  margin-bottom: 10px;
+}
+
+.postresDestacados .galeriaDestacados .cardDestacados a {
   text-decoration: none; /* Sin subrayado */
-  background-color: #a5673f; /* Fondo del botón */
-  color: #fff; /* Texto blanco */
-  padding: 8px 12px; /* Espaciado interno */
-  border-radius: 5px; /* Bordes redondeados */
+  background-color: var(--color-highlight);
+  color: #fff;
+  padding: 8px 12px;
+  border-radius: 5px;
   transition: background-color 0.3s; /* Animación de transición */
 }
 
-.cardDestacados a:hover {
-  background-color: #87492d; /* Color más oscuro al pasar el mouse */
+.postresDestacados .galeriaDestacados .cardDestacados a:hover {
+  background-color: #87492d;
 }
 
 /* Responsividad */
 @media (max-width: 768px) {
-  .cardDestacados {
+  .postresDestacados .galeriaDestacados .cardDestacados {
     width: calc(100% / 2 - 20px); /* Dos tarjetas por fila */
   }
 }
 
 @media (max-width: 480px) {
-  .cardDestacados {
+  .postresDestacados .galeriaDestacados .cardDestacados {
     width: 100%; /* Una tarjeta por fila */
   }
 }
@@ -296,32 +294,31 @@ a {
 /* Estilos para las reseñas */
 .reseñas {
   text-align: center;
-  padding: 20px; /* Espaciado alrededor de la sección */
-  /* background-color: rgba(217, 179, 145, 0.2) */
+  padding: 20px;
 }
 
 .reseñas a {
-  text-decoration: none; /* Sin subrayado */
-  background-color: #a5673f; /* Fondo del botón */
-  color: #fff; /* Texto blanco */
-  padding: 8px 12px; /* Espaciado interno */
-  border-radius: 5px; /* Bordes redondeados */
-  transition: background-color 0.3s; /* Animación de transición */
+  text-decoration: none;
+  background-color: #a5673f;
+  color: #fff;
+  padding: 8px 12px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
 .reseñas a:hover {
-  background-color: #87492d; /* Color más oscuro al pasar el mouse */
+  background-color: #87492d;
 }
 
 .galeriaClientes {
   padding: 30px;
   margin: 0 auto;
-  width: 80%; /* Ajustar el ancho */
+  width: 80%;
   display: flex;
   justify-content: space-evenly;
-  row-gap: 20px; /* Espaciado entre filas */
-  column-gap: 20px; /* Espaciado entre columnas */
-  flex-wrap: wrap; /* Permite que las tarjetas pasen a la siguiente fila si no caben */
+  row-gap: 20px;
+  column-gap: 20px;
+  flex-wrap: wrap;
 }
 
 .tarjetaCliente {
@@ -329,10 +326,10 @@ a {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  border: 2px solid #a5673f; /* Borde */
-  border-radius: 10px; /* Bordes redondeados */
+  border: 2px solid #a5673f;
+  border-radius: 10px;
   background-color: rgba(217, 179, 145, 0.3);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 10px;
   width: calc(100% / 3 - 20px); /* Tres tarjetas por fila */
   max-width: 300px;
@@ -397,8 +394,8 @@ a {
 .nosotros {
   text-align: center;
   padding: 20px;
-  height: 100vh;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .nosotros h2 {
@@ -470,12 +467,12 @@ a {
   align-items: center;
   row-gap: 30px;
   padding: 20px;
-  width: 100%;
+  width: fit-content;
   background-color: rgba(217, 179, 145, 0.5);
   flex-wrap: wrap;
 
   .logo {
-    width: 250px;
+    width: 200px;
     height: auto;
   }
 
@@ -531,13 +528,9 @@ a {
 
     .footer-second-container {
       display: flex;
-      /* width: 100%; */
       flex-direction: column;
-      /* row-gap: 30px; */
       gap: 10px;
       align-items: center;
-      /* padding-top: 10px; */
-
       form input[type="email"] {
         width: 200px;
         padding: 10px;
