--- a/css/estilos.css
+++ b/css/estilos.css
@@ -518,6 +518,116 @@ a {
   }
 }
 
+/* ====== Estilos para la sección de Carrito ====== */
+.container {
+  margin: 20px auto;
+  padding: 15px;
+  max-width: 1200px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.container h1 {
+  font-size: var(--h1-size);
+  color: var(--color-wsmoke);
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+}
+
+.table thead {
+  background-color: var(--color-highlight);
+  color: var(--color-white);
+}
+
+.table th,
+.table td {
+  padding: 10px 15px;
+  text-align: left;
+  border: 1px solid var(--color-bg);
+}
+
+.table-striped tbody tr:nth-child(odd) {
+  background-color: var(--color-light);
+}
+
+.table-striped tbody tr:nth-child(even) {
+  background-color: var(--color-wsmoke);
+}
+
+.table-striped tbody tr:hover {
+  background-color: var(--color-highlight);
+  color: var(--color-white);
+  transition: background-color 0.3s;
+}
+.botonConfirmar {
+  display: flex;
+  justify-content: center;
+  button {
+    background-color: #198754;
+    font-size: medium;
+    color: var(--color-white);
+    padding: 5px 10px;
+    border-radius: 5px;
+    border-color: #198754;
+    border-style: none;
+    cursor: pointer;
+  }
+}
+
+.totalCarrito h3 {
+  font-size: var(--h3-size);
+  text-align: center;
+}
+
+/* Responsividad para el Carrito */
+@media (max-width: 768px) {
+  .container {
+    padding: 10px;
+  }
+
+  .botonConfirmar {
+    button {
+      font-size: small;
+    }
+  }
+
+  .table th,
+  .table td {
+    font-size: 0.9rem;
+    padding: 8px;
+  }
+
+  .table thead {
+    font-size: 1rem;
+  }
+
+  .totalCarrito h3 {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .container h1 {
+    font-size: 2rem;
+  }
+
+  .table th,
+  .table td {
+    font-size: 0.8rem;
+    padding: 5px;
+  }
+
+  .totalCarrito h3 {
+    font-size: 1rem;
+  }
+}
+
 /* Estilos para el footer */
 .footerContainer {
   display: flex;
